--- a/Canvas/app/src/main/res/layout/activity_main.xml
+++ b/Canvas/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.weiguangmeng.canvas.MainActivity">
 
 
     <com.example.weiguangmeng.canvas.customs.FirePicView
+        android:id="@+id/fire_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="400dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+         <ImageView
+            android:id="@+id/display"
+             android:scaleType="fitCenter"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
+        <Button
+            android:id="@+id/ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="display"/>
+    </LinearLayout>
+
 </LinearLayout>
